<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/menu_boxes"
            android:title="@string/nav_categories">
            <menu />
        </item>
        <item
            android:id="@+id/menu_invited_boxes"
            android:title="@string/nav_shared_categories">
            <menu />
        </item>
    </group>

    <group>
        <item android:title="予定">
            <menu>
                <item
                    android:id="@+id/nav_shop_plans"
                    android:title="買い物の予定" />
            </menu>
        </item>
    </group>

    <group>
        <item android:title="@string/nav_filter">
            <menu>
                <item
                    android:id="@+id/nav_expiring"
                    android:title="@string/nav_expiring" />
            </menu>
        </item>
    </group>

    <group>
        <item
            android:id="@+id/nav_add_box"
            android:icon="@drawable/ic_baseline_add"
            android:title="@string/nav_add_box" />
        <item
            android:id="@+id/nav_units"
            android:icon="@drawable/ic_exposure_black"
            android:title="@string/nav_units" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications"
            android:title="@string/nav_settings" />
    </group>
</menu>
